ECA-3167: do not allow generation of 512 bit keys in IE, fix an IE9 layout issue (one of the many) and update some template menus with later additions.
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@17649 37aeb1de-b14b-0410-9a0e-82b28170d228

--- a/modules/publicweb-gui/resources/styles.css
+++ b/modules/publicweb-gui/resources/styles.css
@@ -255,7 +255,6 @@ form {
   padding: 0;
   min-width: 400px;
   max-width: 800px;
-  width: 800px; 
 }
 
 form fieldset {
